# as

./: CMakeLists.txt  SerialAssistant.pro  main.cpp  mainwindow.cpp  mainwindow.h  readme  receivewidget.cpp  receivewidget.h  resources.qrc  sendwidget.cpp  sendwidget.h  serialconfigwidget.cpp  serialconfigwidget.h
